- Added 8 new currencies to 2CheckOut payment gateway (AED, ILS, LTL, PHP, RON, RUB, SGD, TRY)
- Added 2 new currencies to Authorize.net AIM payment gateway (AUD and NZD)
- Add filter so certain products can be excluded from GA tracking
- Pass manual gateway instuctions through wpautop() and allow shortcodes in it
- Remove encoded html from PayPal IPN strings http://wp.mu/7s9

2.8.9 - 9/22/2013 - Aaron Edwards, Arnold, Marko Miljus
----------------------------------------------------------------------
- Added PIN payment gateway (beta)
- Added Simplify Commerce gateway by MasterCard
- Add multiple currency support to Payflow Pro gateway
- Add Euro support to Stripe gateway (Ireland)
- Add "Tax Label" setting to customize the tax line item label in the cart
- Removed all the old style PHP 4 constructors (Class name functions)
- Remove help screen when WPMUDEV_REMOVE_BRANDING defined
- Fixed order_confirmation_email() declaration to match it's parent.(Warnings)
- In USPS shipping added maximum box weights to flat rate boxes to improve calculating the number of boxes needed.
- Fixed problem where shipping option could be unselected if the suboption disappeared due to changing the address.
- In FedEx, default to residential delivery. Only allow the customer to change residential to commercial if Allow Commercial checked in settings.
- Changed Continue Checkout buttonform disabled to hide during the shipping rate update.
- Fix admin styles that stopped being included due to a typo
- Avoid errors in the Paypal gateway if 100% coupons are used by making price 0.01
- Don't show confusing subtotal with tax inclusive pricing on

2.8.8 - 7/15/2013 - Aaron Edwards, Arnold, Marko Miljus
----------------------------------------------------------------------
- Add SKU's to admin new order notification email
- Fixed a rounding error with Paypal chained and Tax Inclusive pricing
- Add support for Ireland locale in paypal and not require postal code